--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import 'css/animations.scss';
+@import 'css/buttons.scss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,8 +18,20 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body, html {
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
 #app {
-  max-width: 1280px;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
+  overflow: hidden;
 }
