--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body, html {
   max-width: 100%;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #app {
@@ -33,5 +33,4 @@ body, html {
   max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
-  overflow: hidden;
 }
